--- a/team.html
+++ b/team.html
@@ -9,7 +9,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">	
 
-		<title>Flash-Land.fr - Serveur GTAVRP</title>	
+		<title>Suna-Roleplay.fr - Serveur GTAVRP</title>	
 
 		<meta name="keywords" content="Suna-Roleplay.fr,Suna,SUNA,GTA,GTARP,GTAVRP,RolePlay,RP" />
 		<meta name="description" content="Site Web Officiel de la Communauté GTAVRP Suna.">
